Bug 104805 - regression in 4.15 unable to reboot/poweroff, vgaswitcheroo doesn't work, RIP: 0010:i915_pci_probe+0x11/0x70 [i915]
Summary: regression in 4.15 unable to reboot/poweroff, vgaswitcheroo doesn't work, RIP...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lionel Landwerlin
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-27 08:18 UTC by Chris Murphy
Modified: 2018-04-20 11:03 UTC (History)
5 users (show)

See Also:
i915 platform: SNB
i915 features: power/suspend-resume


Attachments
dmesg.log (119.59 KB, text/x-log)
2018-01-27 08:20 UTC, Chris Murphy
no flags Details
lspci -vvnn (70.82 KB, text/x-log)
2018-01-27 08:24 UTC, Chris Murphy
no flags Details
git bisect log (2.68 KB, text/x-log)
2018-01-27 08:28 UTC, Chris Murphy
no flags Details

Description Chris Murphy 2018-01-27 08:18:41 UTC
Summary:

Laptop running Fedora 28 with kernel 4.15 (any rc) will not reboot or shutdown, and vgaswitcheroo isn't working so I end up with the hotter discrete GPU). When booting kernel 4.14.14, system can be rebooted, shutdown, and i915 graphics work fine (switcheroo'd).

git bisect blames

commit 5b54eddd3920e9f6f1a6d972454baf350cbae77e
Author: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Date:   Wed Aug 30 17:12:06 2017 +0100

    drm/i915: mark all device info struct with __initconst
    
    As recommended by Chris.
    
    v2: Switch from __initdata to __initconst.
Comment 1 Chris Murphy 2018-01-27 08:20:30 UTC
Created attachment 136982 [details]
dmesg.log
Comment 2 Chris Murphy 2018-01-27 08:24:16 UTC
Created attachment 136983 [details]
lspci -vvnn
Comment 3 Chris Murphy 2018-01-27 08:27:59 UTC
MacbookPro 8,2 (2011)
Intel(R) Core(TM) i7-2820QM CPU @ 2.30GHz
Comment 4 Chris Murphy 2018-01-27 08:28:20 UTC
Created attachment 136984 [details]
git bisect log
Comment 5 Chris Murphy 2018-01-27 08:41:21 UTC
"will not reboot or shutdown" with either gnome-shell Restart/Poweroff, or reboot -f; whereas sysrq b does reboot.
Comment 6 Chris Wilson 2018-01-27 10:42:45 UTC
Sigh. Revert then solve the bloat another way. I think we can move it to a seperate module and only load it during pci_probe. (That module can then play some tricks to construct driver_info using private commands to allow feature enabling.)
Comment 7 Chris Wilson 2018-01-29 20:51:05 UTC
commit 5db47e37b38755c5e26e6b8fbc1a32ce73495940
Author: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Date:   Mon Jan 29 08:33:46 2018 +0000

    Revert "drm/i915: mark all device info struct with __initconst"
    
    This reverts commit 5b54eddd3920e9f6f1a6d972454baf350cbae77e.
    
     Conflicts:
            drivers/gpu/drm/i915/i915_pci.c
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=104805
    Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
    Fixes: 5b54eddd3920 ("drm/i915: mark all device info struct with __initconst")
    Link: https://patchwork.freedesktop.org/patch/msgid/20180129083346.29173-1-lionel.g.landwerlin@intel.com
Comment 8 Jani Saarinen 2018-04-20 11:03:11 UTC
Closing, please re-open if still occurs.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.