BACKPORT: Revert "drm/i915: mark all device info struct with __initconst"

This reverts commit 5b54eddd3920e9f6f1a6d972454baf350cbae77e.

 Conflicts:
	drivers/gpu/drm/i915/i915_pci.c

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=104805
Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
Fixes: 5b54eddd3920 ("drm/i915: mark all device info struct with __initconst")
Link: https://patchwork.freedesktop.org/patch/msgid/20180129083346.29173-1-lionel.g.landwerlin@intel.com
(cherry picked from commit 5db47e37b38755c5e26e6b8fbc1a32ce73495940)

Conflicts:
	Context delta on:
	drivers/gpu/drm/i915/i915_pci.c

BUG=chromium:811966
TEST=No display regressions on chromeos-4.14.

Change-Id: I9513d30d1fd30238a4c7ad21ea8424f85c8a5e5d
Signed-off-by: Nathan Ciobanu <nathan.d.ciobanu@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/919389
Tested-by: Casey G Bowman <casey.g.bowman@intel.com>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>